Добавляет верстку мобильной версии шапки + исправление ошибок

--- a/src/assets/sass/components/category/sorting.scss
+++ b/src/assets/sass/components/category/sorting.scss
@@ -107,6 +107,7 @@
     background: #FFFFFF url('../assets/img/category/arrow-down.svg') no-repeat center right 8px;
     border: 1px solid #E9E9E9;
     border-radius: 4px;
+    font-family: 'Montserrat';
     font-weight: 300;
     font-size: 14px;
     line-height: 140%;
@@ -135,6 +136,7 @@
         border: none;
         background-color: transparent;
         border-radius: 2px;
+        font-family: 'Montserrat';
         font-weight: 300;
         font-size: 12px;
         line-height: 15px;
