--- a/src/assets/sass/global/decorative.scss
+++ b/src/assets/sass/global/decorative.scss
@@ -6,6 +6,11 @@
     height: 623px;
     background: url('../assets/img/main-decorative.webp') no-repeat;
 
+    @media (max-width: $maxMobWidth) {
+        display: none;
+        background: none;
+    }
+
     &__right {
         right: 0;
 
@@ -29,6 +34,11 @@
             width: 366px;
             height: 502px;
             background-image: url('../assets/img/footer-rose.svg');
+
+            @media (max-width: $maxMobWidth) {
+                display: none;
+                background: none;
+            }
         }
 
         &--product {
@@ -57,6 +67,11 @@
     &__left {
         left: 0;
         background: url('../assets/img/decorative-left.webp') no-repeat;
+
+        @media (max-width: $maxMobWidth) {
+            display: none;
+            background: none;
+        }
 
         &--main {
             &-top {
