--- a/src/assets/sass/components/header.scss
+++ b/src/assets/sass/components/header.scss
@@ -8,8 +8,17 @@
     line-height: 15px;
     color: #535353;
 
+    @media (max-width: $maxMobWidth) {
+        padding: 16px 8px;
+        margin-bottom: 16px;
+    }
+
     &--main {
         margin-bottom: 656px;
+
+        @media (max-width: $maxMobWidth) {
+            margin: 0;
+        }
     }
 
     &__wrapper {
@@ -30,11 +39,32 @@
             #city {
                 display: none;
             }
+
+            @media (max-width: $maxMobWidth) {
+                display: none;
+            }
         }
 
         &--third {
             justify-content: space-between;
             margin-top: 32px;
+
+            @media (max-width: $maxMobWidth) {
+                position: absolute;
+                top: 56px;
+                left: 0;
+                z-index: 2;
+                display: none;
+                width: 100%;
+                margin: 0;
+                padding: 40px 0;
+                border-top: 1px solid #E9E9E9;
+                background-color: #FFFFFF;
+
+                &--active {
+                    display: block;
+                }
+            }
         }
     }
 }
@@ -113,6 +143,10 @@
         position: relative;
         margin-right: 47px;
 
+        @media (max-width: $maxMobWidth) {
+            margin-right: auto;
+        }
+
         &::after {
             position: absolute;
             top: 1px;
@@ -122,12 +156,78 @@
             background-color: #E9E9E9;
             cursor: default;
             content: "";
+
+            @media (max-width: $maxMobWidth) {
+                content: none;
+            }
+        }
+    }
+
+    &__burger-btn {
+        display: none;
+
+        @media (max-width: $maxMobWidth) {
+            position: relative;
+            display: block;
+            width: 24px;
+            height: 24px;
+            margin-right: 16px;
+            border: none;
+            background-color: transparent;
+
+            span {
+                position: absolute;
+                left: 3px;
+                display: block;
+                width: 18px;
+                height: 2px;
+                opacity: 1;
+                background-color: #000000;
+                transform: rotate(0deg);
+                transition: transform 0.4s, opacity 0.4s, top 0.2s;
+
+                &:nth-child(1) {
+                    top: 6px;
+                }
+
+                &:nth-child(2) {
+                    top: 11px;
+                }
+
+                &:nth-child(3) {
+                    top: 16px;
+                }
+            }
+
+            &--active {
+                span {
+                    &:nth-child(1) {
+                        top: 45%;
+                        transform: rotate(-45deg);
+                    }
+
+                    &:nth-child(2) {
+                        top: 45%;
+                        transform: rotate(45deg);
+                    }
+
+                    &:nth-child(3) {
+                        opacity: 0;
+                        top: 45%;
+                        transform: rotate(45deg);
+                    }
+                }
+            }
         }
     }
 
     &__address {
         max-width: 213px;
         margin-right: 41px;
+
+        @media (max-width: $maxMobWidth) {
+            display: none;
+        }
     }
 
     &__search {
@@ -142,12 +242,33 @@
         font-size: 12px;
         line-height: 15px;
 
+        &:focus-visible {
+            outline: none;
+        }
+
+        @media (max-width: $maxMobWidth) {
+            &::placeholder {
+                color: transparent;
+            }
+
+            width: 24px;
+            height: 24px;
+            padding: 0;
+            border: none;
+            flex-grow: 0;
+        }
+
         &-wrapper {
             position: relative;
             flex-grow: 1;
             display: flex;
             max-width: 620px;
             margin-right: 16px;
+
+            @media (max-width: $maxMobWidth) {
+                flex-grow: 0;
+                margin-right: 0;
+            }
         }
     }
 
@@ -156,6 +277,10 @@
         justify-content: space-between;
         align-items: center;
         width: 208px;
+
+        @media (max-width: $maxMobWidth) {
+            display: none;
+        }
     }
 }
 
@@ -207,6 +332,10 @@
         align-items: center;
         flex-grow: 1;
         max-width: 40px;
+
+        @media (max-width: $maxMobWidth) {
+            display: none;
+        }
     }
 
     &__link {
@@ -232,6 +361,13 @@
         flex-grow: 100;
         max-width: 1184px;
         margin-right: 15px;
+
+        @media (max-width: $maxMobWidth) {
+            display: grid;
+            gap: 40px;
+            justify-content: center;
+            margin-right: 0;
+        }
     }
 
     &__user-navigation {
@@ -240,10 +376,20 @@
         align-items: center;
         flex-grow: 1;
         max-width: 72px;
+
+        @media (max-width: $maxMobWidth) {
+            display: none;
+        }
     }
 }
 
 .products-navigation {
+    &__item {
+        @media (max-width: $maxMobWidth) {
+            text-align: center;
+        }
+    }
+
     &__link {
         font-family: 'Montserrat';
         font-weight: 700;
