--- a/src/assets/sass/components/banner.scss
+++ b/src/assets/sass/components/banner.scss
@@ -2,6 +2,11 @@
     margin-bottom: 120px;
     padding: 0 22px;
 
+    @media (max-width: $maxMobWidth) {
+        padding: 0;
+        margin-bottom: 110px;
+    }
+
     &__content {
         position: relative;
         display: flex;
@@ -11,10 +16,22 @@
         padding: 34px 450px 31px 120px;
         background: linear-gradient(270deg, #FFF1F4 0%, #F9F9F9 100%);
         border-radius: 4px;
+
+        @media (max-width: $maxMobWidth) {
+            flex-direction: column;
+            align-items: center;
+            padding: 32px 8px;
+            padding-bottom: 253px;
+        }
     }
 
     &__wrapper {
         margin-right: 103px;
+
+        @media (max-width: $maxMobWidth) {
+            margin: 0;
+            margin-bottom: 32px;
+        }
     }
 
     &__title {
@@ -24,12 +41,27 @@
         font-size: 36px;
         line-height: 42px;
         text-transform: uppercase;
+
+        @media (max-width: $maxMobWidth) {
+            margin-bottom: 24px;
+            font-size: 24px;
+            line-height: 28px;
+            text-align: center;
+        }
     }
 
     &__description {
         font-family: 'Montserrat';
         font-weight: 500;
         line-height: 20px;
+
+        @media (max-width: $maxMobWidth) {
+            display: block;
+            padding: 0 46px;
+            font-size: 14px;
+            line-height: 140%;
+            text-align: center;
+        }
     }
 
     &__form {
@@ -55,6 +87,15 @@
             outline: none;
             border: 1px solid #888888;
             color: #000000;
+        }
+
+        @media (max-width: $maxMobWidth) {
+            width: 100%;
+            border-color: transparent;
+            background-color: transparent;
+            margin-bottom: 11px;
+            font-size: 10px;
+            line-height: 12px;
         }
     }
 
@@ -137,6 +178,13 @@
         width: 300px;
         height: 251px;
         background: url('../assets/img/phone.svg') no-repeat;
+
+        @media (max-width: $maxMobWidth) {
+            top: auto;
+            right: 50%;
+            bottom: -30px;
+            transform: translateX(50%);
+        }
     }
 
     &--category {
