--- a/src/assets/sass/components/brands.scss
+++ b/src/assets/sass/components/brands.scss
@@ -2,6 +2,11 @@
     padding: 0 22px;
     margin-bottom: 120px;
 
+    @media (max-width: $maxMobWidth) {
+        padding: 0;
+        margin-bottom: 80px;
+    }
+
     &__title {
         text-align: center;
     }
@@ -13,10 +18,18 @@
             column-gap: 90px;
             max-width: 1350px;
             margin: 0 auto;
+
+            @media (max-width: $maxMobWidth) {
+                display: flex;
+                overflow-x: scroll;
+                overflow-y: hidden;
+            }
         }
 
         &__item,
         &__img {
+            min-width: 150px;
+            min-height: 150px;
             width: 100%;
             height: 100%;
             max-width: 150px;
