--- a/src/assets/sass/components/faq.scss
+++ b/src/assets/sass/components/faq.scss
@@ -2,6 +2,11 @@
     margin-bottom: 145px;
     padding: 0 22px;
 
+    @media (max-width: $maxMobWidth) {
+        padding: 0;
+        margin-bottom: 48px;
+    }
+
 
     &__list {
         display: flex;
@@ -50,6 +55,10 @@
         flex-direction: column;
         padding: 32px 89px 32px 0;
 
+        @media (max-width: $maxMobWidth) {
+            padding: 24px 45px 24px 0;
+        }
+
         &::before {
             position: absolute;
             z-index: 1;
@@ -97,6 +106,11 @@
             font-weight: 700;
             color: #000000;
         }
+
+        @media (max-width: $maxMobWidth) {
+            font-size: 14px;
+            line-height: 17px;
+        }
     }
 
     &__answer {
@@ -105,6 +119,11 @@
 
         &--active {
             display: block;
+        }
+
+        @media (max-width: $maxMobWidth) {
+            font-size: 12px;
+            line-height: 160%;
         }
 
     }
@@ -149,6 +168,11 @@
             &::after {
                 background: #888888;
             }
+        }
+
+        @media (max-width: $maxMobWidth) {
+            top: 18px;
+            right: 1px;
         }
     }
 }
