--- a/src/assets/sass/components/product/product.scss
+++ b/src/assets/sass/components/product/product.scss
@@ -5,6 +5,10 @@
     margin: 0 auto;
     margin-bottom: 40px;
 
+    @media (max-width: $maxMobWidth) {
+        flex-direction: column;
+    }
+
     &__photos {
         margin-right: 32px;
     }
@@ -15,6 +19,15 @@
         margin-right: 24px;
         padding-right: 16px;
         border-right: 1px solid #E9E9E9;
+
+        @media (max-width: $maxMobWidth) {
+            flex-direction: column;
+            border: none;
+            gap: 16px;
+            padding: 0;
+            margin: 0 auto;
+            margin-bottom: 16px;
+        }
     }
 
     &__preview {
@@ -26,6 +39,13 @@
         padding-bottom: 16px;
         border: 1px solid #E9E9E9;
         border-radius: 4px;
+
+        @media (max-width: $maxMobWidth) {
+            min-width: 344px;
+            border: none;
+            padding-bottom: 0;
+            padding-top: 23px;
+        }
     }
 
     &__label {
@@ -54,44 +74,85 @@
         display: flex;
         flex-direction: column;
         min-width: 465px;
+
+        @media (max-width: $maxMobWidth) {
+            min-width: 344px;
+        }
     }
 
     &__row {
         display: flex;
+        justify-content: center;
 
         &:nth-child(1) {
             gap: 40px;
             margin-bottom: 2px;
+
+            @media (max-width: $maxMobWidth) {
+                display: none;
+            }
         }
 
         &:nth-child(2) {
             margin-bottom: 16px;
+
+            @media (max-width: $maxMobWidth) {
+                display: none;
+            }
         }
 
         &:nth-child(3) {
             gap: 24px;
             margin-bottom: 16px;
+
+            @media (max-width: $maxMobWidth) {
+                display: none;
+            }
         }
 
         &:nth-child(4) {
             margin-bottom: 8px;
+
+            @media (max-width: $maxMobWidth) {
+                margin-bottom: 13px;
+            }
         }
 
         &:nth-child(5) {
             margin-bottom: 16px;
+
+            @media (max-width: $maxMobWidth) {
+                display: none;
+            }
         }
 
         &:nth-child(6) {
             margin-bottom: 24px;
+
+            @media (max-width: $maxMobWidth) {
+                margin-bottom: 16px;
+            }
         }
 
         &:nth-child(7) {
             gap: 16px;
             margin-bottom: 24px;
+
+            @media (max-width: $maxMobWidth) {
+                display: grid;
+                grid-template-columns: 80px 254px;
+                gap: 16px 10px;
+                justify-content: center;
+                margin-bottom: 16px;
+            }
         }
 
         &:nth-child(8) {
             margin-bottom: 24px;
+
+            @media (max-width: $maxMobWidth) {
+                margin-bottom: 16px;
+            }
         }
     }
 
@@ -100,6 +161,14 @@
         font-weight: 500;
         font-size: 18px;
         line-height: 120%;
+
+        @media (max-width: $maxMobWidth) {
+            max-width: 100%;
+            margin-bottom: 8px;
+            font-size: 14px;
+            line-height: 140%;
+            text-align: center;
+        }
     }
 
     &__code {
@@ -107,6 +176,13 @@
         font-size: 12px;
         line-height: 15px;
         color: #888888;
+
+        @media (max-width: $maxMobWidth) {
+            margin-bottom: 16px;
+            font-size: 10px;
+            line-height: 12px;
+            text-align: center;
+        }
     }
 
     &__rating-count {
@@ -122,6 +198,10 @@
 
     &__price {
         margin-bottom: 0;
+
+        @media (max-width: $maxMobWidth) {
+            justify-content: center;
+        }
     }
 
     &__sale {
@@ -136,6 +216,10 @@
         display: flex;
         align-items: center;
         gap: 8px;
+
+        @media (max-width: $maxMobWidth) {
+            flex-direction: column;
+        }
     }
 
     &__count {
@@ -146,6 +230,28 @@
     &__to-cart {
         max-width: 200px;
         margin-bottom: 0;
+
+        @media (max-width: $maxMobWidth) {
+            max-width: 100%;
+        }
+    }
+
+    &__buy {
+        grid-column: 1 / -1;
+        outline: 1px solid #000000;
+        border: none;
+        border-radius: 4px;
+        padding: 15px;
+        font-size: 14px;
+        line-height: 17px;
+        transition: all .6s, color .3s;
+
+        &:hover {
+            color: #fff;
+            outline: 0;
+            background: #f08597;
+            box-shadow: 0 0 50px #ffbcc7;
+        }
     }
 
     &__beautician {
@@ -173,6 +279,10 @@
         max-width: 928px;
         margin: 0 auto;
         margin-bottom: 120px;
+
+        @media (max-width: $maxMobWidth) {
+            margin-bottom: 80px;
+        }
     }
 
     &__you-like {
@@ -180,150 +290,19 @@
         margin: 0 auto;
         margin-bottom: 120px;
     }
-}
 
-.products-volume {
-    &__text {
-        font-weight: 600;
-        font-size: 14px;
-        line-height: 17px;
-    }
+    &__mob {
+        display: none;
 
-    &__list {
-        display: flex;
-        gap: 8px;
-    }
-
-    &__item {
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        padding: 6px 10.5px;
-        border: 1px solid #000000;
-        border-radius: 4px;
-        font-weight: 300;
-        font-size: 14px;
-        line-height: 140%;
-        color: #888888;
-        cursor: pointer;
-        transition: background-color 0.4s, border-color 0.4s, box-shadow 0.4s, color 0.4s;
-
-        &:hover {
-            color: #fff;
-            border-color: #f08597;
-            background-color: #f08597;
-            box-shadow: 0 0 50px #ffbcc7;
+        &-wrapper {
+            display: flex;
+            justify-content: space-between;
         }
 
-        &--active {
-            font-weight: 600;
-            line-height: 17px;
-            color: #FFFFFF;
-            background-color: #000000;
-            border-color: #000000;
-            border-radius: 4px;
-            cursor: default;
-
-            &:hover {
-                background-color: #000000;
-                border-color: #000000;
-                box-shadow: none;
-            }
+        @media (max-width: $maxMobWidth) {
+            display: flex;
+            flex-direction: column;
+            margin-bottom: -8px;
         }
-    }
-}
-
-.products-count {
-    &__input {
-        width: 56px;
-        height: 48px;
-        border: 1px solid #000000;
-        border-radius: 4px;
-        font-weight: 300;
-        font-size: 14px;
-        line-height: 140%;
-        text-align: center;
-
-        &::-webkit-outer-spin-button,
-        &::-webkit-inner-spin-button {
-            -webkit-appearance: none;
-            margin: 0;
-        }
-    }
-
-    &__btns {
-        display: flex;
-        flex-direction: column;
-        gap: 16px;
-    }
-
-    &__btn {
-        align-self: center;
-        width: 16px;
-        height: 16px;
-        background: url('../assets/img/category/arrow.svg') no-repeat center;
-        background-size: 16px;
-        border: 0;
-        transform: rotate(90deg);
-        cursor: pointer;
-
-        &--minus {
-            transform: rotate(-90deg);
-        }
-    }
-}
-
-.products-delivery {
-    &__list {
-        display: grid;
-        gap: 64px;
-    }
-
-    &__item {
-        display: grid;
-        gap: 16px;
-        padding-left: 49px;
-
-        &:nth-child(1) {
-            background: url('../assets/img/product/delivery1.svg') no-repeat top left;
-        }
-
-        &:nth-child(2) {
-            background: url('../assets/img/product/delivery2.svg') no-repeat top left;
-        }
-
-        &:nth-child(3) {
-            background: url('../assets/img/product/delivery3.svg') no-repeat top left;
-        }
-    }
-
-    &__name {
-        font-weight: 600;
-        font-size: 14px;
-        line-height: 17px;
-    }
-
-    &__descr {
-        font-weight: 300;
-        font-size: 14px;
-        line-height: 140%;
-
-        span {
-            font-weight: 500;
-        }
-    }
-}
-
-.products-full-info {
-    &__descr {
-        font-weight: 300;
-        font-size: 14px;
-        line-height: 140%;
-    }
-
-    &__imgs {
-        display: flex;
-        gap: 32px;
-        margin: 24px 0;
     }
 }
